--- a/hepo_dakar-next-js/styles/_navigation.scss
+++ b/hepo_dakar-next-js/styles/_navigation.scss
@@ -1,49 +1,75 @@
 .header {
-    background-color: #2c236b;
-    .nav-item{
-        white-space: nowrap;
-        .dropdown{
-            &:hover{
-                > .dropdown-menu{
-                    display: block;
+    background-color: map.get($theme-colors, "primary");
+    @include media-breakpoint-up(sm) {
+        .nav-item{
+            white-space: nowrap;
+            .dropdown{
+                &:hover, &.show{
+                    > .dropdown-menu{
+                        display: block;
+                    }
                 }
             }
         }
-    }
-    .dropdown-menu{
-        padding: 0;
-        margin: 0;
-        .nav-link{
-            color: #212529;
-            &:after{
-                display: none;
+        .dropdown-menu{
+            padding: 0;
+            margin: 0;
+            .nav-link{
+                &:after{
+                    display: none;
+                }
+                &:hover, &.show{
+                    background-color: theme-colors("primary");
+                    color: #fff;
+                }
             }
+        }
+        .nav-link{
+            color: #fff;
             &:hover{
-                background-color: #2c236b;
+                color: map.get($theme-colors, "secondary");
+            }
+        }
+        .dropdown .dropdown{
+            .nav-link{
+                color: #212529;
+            }
+            &:hover > .nav-link, &:hover .nav-link:hover{
+                background-color: map.get($theme-colors, "primary");
                 color: #fff;
             }
         }
-    }
-    .nav-link{
-        color: #fff;
-        &:hover{
-            color: #bb984f;
-        }
-    }
-    // Level 2
-    .navbar-nav >.nav-item.dropdown:hover{
-        position: relative;
-        > .dropdown-menu{
-            display: block;
-            // Level 3 +
-            .nav-item.dropdown:hover{
+        // Level 2
+        .navbar-nav >.nav-item.dropdown {
+            &:hover, &.show{
                 position: relative;
                 > .dropdown-menu{
                     display: block;
-                    position: absolute;
-                    left: 100%;
-                    top: 0;
+                    // Level 3 +
+                    .nav-item.dropdown{
+                        &.show .dropdown-menu{display: none;}
+                        &:hover {
+                            position: relative;
+                            > .dropdown-menu{
+                                display: block;
+                                position: absolute;
+                                left: 100%;
+                                top: 0;
+                            }
+                        }
+                    }
                 }
+            }
+        }
+    }
+    @include media-breakpoint-down(sm) {
+        .nav-link {
+            color: map.get($theme-colors, "light");
+        }
+        .dropdown-menu{
+            background-color: map.get($theme-colors, "primary");
+            &.show {
+                padding-left: 10px;
             }
         }
     }
