Créer la section d appel a l action - Ajouter la possibilite d avoir un chier telechargeable comme action - Telecharger la brochure

--- a/hepo_dakar-next-js/styles/custom.scss
+++ b/hepo_dakar-next-js/styles/custom.scss
@@ -38,10 +38,11 @@ $theme-colors: (
     }
 }
 
-.btn-primary {
+.btn {
     border-radius: 1.75rem;
     text-transform: uppercase;
 }
+
 .form-control {
     border-radius: 1.75rem;
 }
