--- a/hepo_dakar-next-js/styles/_navigation.scss
+++ b/hepo_dakar-next-js/styles/_navigation.scss
@@ -1,5 +1,6 @@
 .header {
-    background-color: map.get($theme-colors, "primary");
+    background-color: rgba(map.get($theme-colors, "primary"), 0.9);
+    backdrop-filter: blur(5px);
     @include media-breakpoint-up(sm) {
         .nav-item{
             white-space: nowrap;
@@ -15,11 +16,14 @@
             padding: 0;
             margin: 0;
             .nav-link{
+                width: 250px;
+                white-space: collapse;
+                color: #212529;
                 &:after{
                     display: none;
                 }
                 &:hover, &.show{
-                    background-color: theme-colors("primary");
+                    background-color: map.get($theme-colors, "primary");
                     color: #fff;
                 }
             }
