Edit fonts and fix header issues

--- a/hepo_dakar-next-js/styles/custom.scss
+++ b/hepo_dakar-next-js/styles/custom.scss
@@ -26,6 +26,14 @@ $theme-colors: (
 //     outline: 1px red dotted;
 // }
 
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 600;
+}
+
 .page__header {
     position: relative;
     padding-top: 80px;
