--- a/hepo_dakar-next-js/styles/_navigation.scss
+++ b/hepo_dakar-next-js/styles/_navigation.scss
@@ -1,7 +1,22 @@
 .header {
-    background-color: rgba(map.get($theme-colors, "primary"), 0.9);
+    background-color: rgba(map.get($theme-colors, "primary"), 0.8);
     backdrop-filter: blur(5px);
+    padding: 0;
     @include media-breakpoint-up(sm) {
+        .navbar-brand {
+            padding-top: 5px;
+            padding-bottom: 5px;
+            .logo {
+                max-height: 60px;
+            }
+        }
+        .navbar-nav > .nav-item > .nav-link,
+        .navbar-nav > .nav-link{
+            line-height: 40px;
+            padding: 20px 15px;
+            text-transform: uppercase;
+            font-size: 14px;
+        }
         .nav-item{
             white-space: nowrap;
             .dropdown{
