--- a/hepo_dakar-next-js/styles/sections/_slider.scss
+++ b/hepo_dakar-next-js/styles/sections/_slider.scss
@@ -1,27 +1,36 @@
 .section__slider{
     .carousel-caption{        
-        /* Background color with transparency (50% opacity) */
-        background-color: rgba(255, 255, 255, 0.5); 
-        /* Apply a blur effect to the background */
-        backdrop-filter: blur(5px);
 
         @include media-breakpoint-up(sm) {
-            bottom: 50%;
-            &.left{
-                transform: translate(0, -50%);
-                text-align: left;
-                left: 0;
-                right: 40%;
-                padding-left: 15%;
-                padding-right: 25px;
-            }
-            &.right{
-                transform: translate(0, -50%);
-                text-align: right;
-                right: 0;
-                left: 40%;
-                padding-right: 15%;
-                padding-left: 25px;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            &__wrapper{
+                /* Background color with transparency (50% opacity) */
+                background-color: rgba(255, 255, 255, 0.5); 
+                /* Apply a blur effect to the background */
+                backdrop-filter: blur(5px);
+                padding-top: 25px;
+                padding-bottom: 25px;
+                position: absolute;
+                &.left{
+                    transform: translateX(-50%);
+                    text-align: left;
+                    left: 0;
+                    padding-left: 50%;
+                    padding-right: 25px;
+                }
+                &.right{
+                    transform: translateX(50%);
+                    text-align: right;
+                    right: 0;
+                    padding-right: 50%;
+                    padding-left: 25px;
+                }
             }
         }
                   
@@ -30,7 +39,6 @@
         }
         p{
             color: #212529;
-            margin-bottom: 0;
         }
     }
 }
