--- a/hepo_dakar-next-js/styles/_navigation.scss
+++ b/hepo_dakar-next-js/styles/_navigation.scss
@@ -30,16 +30,20 @@
         .dropdown-menu{
             padding: 0;
             margin: 0;
+            background-color: rgba(map.get($theme-colors, "primary"), 0.8);
+            backdrop-filter: blur(5px);
+            border-top-left-radius: none;
+            border-top-right-radius: none;
             .nav-link{
                 width: 250px;
                 white-space: collapse;
-                color: #212529;
+                color: #fff;
                 &:after{
                     display: none;
                 }
                 &:hover, &.show{
-                    background-color: map.get($theme-colors, "primary");
-                    color: #fff;
+                    background-color: map.get($theme-colors, "secondary");
+                    color: #212529;
                 }
             }
         }
@@ -51,11 +55,11 @@
         }
         .dropdown .dropdown{
             .nav-link{
-                color: #212529;
+                color: #fff;
             }
             &:hover > .nav-link, &:hover .nav-link:hover{
-                background-color: map.get($theme-colors, "primary");
-                color: #fff;
+                background-color: map.get($theme-colors, "secondary");
+                color: #212529;
             }
         }
         // Level 2
