Edit contact form - Create a Programmes Section - update programme styling - Update certain layouts - add a form to be ablt to register to a course as a student - Update aspect ration on homebage banner slider - STyling added

--- a/hepo_dakar-next-js/styles/_article.scss
+++ b/hepo_dakar-next-js/styles/_article.scss
@@ -6,4 +6,9 @@
         top: 0;
         right: 0;
     }
+    .card{
+        border-radius: 1.75rem;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        border: none;
+    }
 }
