add whatsapp - add programmes sections - make programmes section dynamic

--- a/hepo_dakar-next-js/styles/custom.scss
+++ b/hepo_dakar-next-js/styles/custom.scss
@@ -25,6 +25,7 @@ $xl: 1200px;
 @import "programmes";
 @import "article";
 @import "contact";
+@import "whatsapp";
 
 // Sections
 @import "sections/slider";
