--- a/hepo_dakar-next-js/styles/_article.scss
+++ b/hepo_dakar-next-js/styles/_article.scss
@@ -10,5 +10,30 @@
         border-radius: 1.75rem;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         border: none;
+        .btn{
+            position: absolute;
+            bottom: -20px;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            opacity: 0;
+            visibility: hidden;
+            transform: scale(0);
+            transition: all 0.2s;
+            i{
+                display: block;
+            }
+        }
+        &:hover {
+            .btn{
+                opacity: 1;
+                visibility: visible;
+                transform: scale(1);
+            }
+        }
     }
 }
