--- a/hepo_dakar-next-js/styles/_navigation.scss
+++ b/hepo_dakar-next-js/styles/_navigation.scss
@@ -23,6 +23,7 @@
                 &:hover, &.show{
                     > .dropdown-menu{
                         display: block;
+                        visibility: visible;
                     }
                 }
             }
