--- a/hepo_dakar-next-js/styles/_article.scss
+++ b/hepo_dakar-next-js/styles/_article.scss
@@ -10,6 +10,11 @@
         border-radius: 1.75rem;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         border: none;
+        transition: all 0.4s;
+        &:hover{
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 5px;
+            opacity: 0.7;
+        }
         .btn{
             position: absolute;
             bottom: -20px;
