--- a/hepo_dakar-next-js/styles/_whatsapp.scss
+++ b/hepo_dakar-next-js/styles/_whatsapp.scss
@@ -3,6 +3,7 @@
     background-color: none;
     transform: scale(1);
     transition: all 0.4s;
+    padding: 14px;
     &__message{
         position: absolute;
         background-color: rgba(255, 255, 255, 0.5); 
@@ -20,6 +21,10 @@
         visibility: hidden;
         transform: translateX(50%);
         transition: all 0.4s;
+    }
+    img{
+        width: 100%;
+        height: auto;
     }
     &:hover{
         transform: scale(1.2);
