--- a/hepo_dakar-next-js/styles/custom.scss
+++ b/hepo_dakar-next-js/styles/custom.scss
@@ -29,6 +29,7 @@ $xl: 1200px;
 
 // Sections
 @import "sections/slider";
+@import "sections/faq";
 
 // * {
 //     outline: 1px red dotted;
@@ -55,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 40px;
     margin-bottom: 20px;
     margin-top: 20px;
-    > h1, p:first{
+    h1:first-of-type, h1:first-of-type + p{
         text-align: center;
     }
 }
