--- a/hepo_dakar-next-js/styles/_programmes.scss
+++ b/hepo_dakar-next-js/styles/_programmes.scss
@@ -1,4 +1,5 @@
 .programme {
+    text-decoration: none;
     &__content{
         h2 {
             color: map.get($theme-colors, "primary");
@@ -14,6 +15,51 @@
             }
             &:first-of-type{
                 margin-top: 0;
+            }
+        }
+    }
+
+    
+    .card{
+        text-decoration: none;
+        border-radius: 1.75rem;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        border: none;
+        transition: all 0.4s;
+        &:hover{
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 5px;
+            opacity: 0.7;
+        }
+        .btn{
+            position: absolute;
+            bottom: -20px;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            opacity: 0;
+            visibility: hidden;
+            transform: scale(0);
+            transition: all 0.2s;
+            i{
+                display: block;
+            }
+        }
+        .card-body{
+            position: relative;
+            .badge{
+                position: absolute;  
+                top: -10px;
+            }
+        }
+        &:hover {
+            .btn{
+                opacity: 1;
+                visibility: visible;
+                transform: scale(1);
             }
         }
     }
