--- a/hepo_dakar-next-js/styles/custom.scss
+++ b/hepo_dakar-next-js/styles/custom.scss
@@ -64,6 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 .btn {
     border-radius: 1.75rem;
     text-transform: uppercase;
+    font-size: 14px;
 }
 
 .form-control {
