Page Programmes - Lister les programmes et filtrer par Niveau detudes - Modifier Loader - Make Programme Card a client component - Utilisation de Fragments dans groq pour eviter les repetitions - Ajouter le champ internation pour les numéros de Tel dans le formulaire dinscription

--- a/hepo_dakar-next-js/styles/custom.scss
+++ b/hepo_dakar-next-js/styles/custom.scss
@@ -26,6 +26,7 @@ $xl: 1200px;
 @import "article";
 @import "contact";
 @import "whatsapp";
+@import "loader";
 
 // Sections
 @import "sections/slider";
