Modifications sur la page de contact - Ajout du champ numéro de téléphone - Creation de la section media -> Texte - Mise a jour des formulaires de contact et dinscription - Mise a jor du schema de paramètres du site

--- a/hepo_dakar-next-js/styles/custom.scss
+++ b/hepo_dakar-next-js/styles/custom.scss
@@ -27,6 +27,7 @@ $xl: 1200px;
 @import "contact";
 @import "whatsapp";
 @import "loader";
+@import "forms";
 
 // Sections
 @import "sections/slider";
