--- a/hepo_dakar-next-js/styles/_navigation.scss
+++ b/hepo_dakar-next-js/styles/_navigation.scss
@@ -1,100 +1,107 @@
 .header {
-    background-color: rgba(map.get($theme-colors, "primary"), 0.8);
-    backdrop-filter: blur(5px);
-    padding: 0;
-    @include media-breakpoint-up(sm) {
-        .navbar-brand {
-            padding-top: 5px;
-            padding-bottom: 5px;
-            .logo {
-                max-height: 60px;
-            }
-        }
-        .navbar-nav > .nav-item > .nav-link,
-        .navbar-nav > .nav-link{
-            line-height: 40px;
-            padding: 20px 15px;
-            text-transform: uppercase;
-            font-size: 14px;
-        }
-        .nav-item{
-            white-space: nowrap;
-            .dropdown{
-                &:hover, &.show{
-                    > .dropdown-menu{
-                        display: block;
-                        visibility: visible;
-                    }
-                }
-            }
-        }
-        .dropdown-menu{
-            padding: 0;
-            margin: 0;
-            background-color: rgba(map.get($theme-colors, "primary"), 0.8);
-            backdrop-filter: blur(5px);
-            border-top-left-radius: none;
-            border-top-right-radius: none;
-            .nav-link{
-                width: 250px;
-                white-space: collapse;
-                color: #fff;
-                &:after{
-                    display: none;
-                }
-                &:hover, &.show{
-                    background-color: map.get($theme-colors, "secondary");
-                    color: #212529;
-                }
-            }
-        }
-        .nav-link{
-            color: #fff;
-            &:hover{
-                color: map.get($theme-colors, "secondary");
-            }
-        }
-        .dropdown .dropdown{
-            .nav-link{
-                color: #fff;
-            }
-            &:hover > .nav-link, &:hover .nav-link:hover{
-                background-color: map.get($theme-colors, "secondary");
-                color: #212529;
-            }
-        }
-        // Level 2
-        .navbar-nav >.nav-item.dropdown {
-            &:hover, &.show{
-                position: relative;
-                > .dropdown-menu{
-                    display: block;
-                    // Level 3 +
-                    .nav-item.dropdown{
-                        &.show .dropdown-menu{display: none;}
-                        &:hover {
-                            position: relative;
-                            > .dropdown-menu{
-                                display: block;
-                                position: absolute;
-                                left: 100%;
-                                top: 0;
-                            }
-                        }
-                    }
-                }
-            }
-        }
+  background-color: rgba(map.get($theme-colors, "primary"), 0.8);
+  backdrop-filter: blur(5px);
+  padding: 0;
+  @include media-breakpoint-up(sm) {
+    .navbar-brand {
+      padding-top: 5px;
+      padding-bottom: 5px;
+      .logo {
+        max-height: 60px;
+      }
     }
-    @include media-breakpoint-down(sm) {
-        .nav-link {
-            color: map.get($theme-colors, "light");
-        }
-        .dropdown-menu{
-            background-color: map.get($theme-colors, "primary");
-            &.show {
-                padding-left: 10px;
-            }
-        }
+    .navbar-nav > .nav-item > .nav-link,
+    .navbar-nav > .nav-link {
+      line-height: 40px;
+      padding: 20px 15px;
+      text-transform: uppercase;
+      font-size: 14px;
     }
+    .nav-item {
+      white-space: nowrap;
+      .dropdown {
+        &:hover,
+        &.show {
+          > .dropdown-menu {
+            display: block;
+            visibility: visible;
+          }
+        }
+      }
+    }
+    .dropdown-menu {
+      @include fade-in-up;
+      padding: 0;
+      margin: 0;
+      background-color: rgba(map.get($theme-colors, "primary"), 0.8);
+      backdrop-filter: blur(5px);
+      border-top-left-radius: none;
+      border-top-right-radius: none;
+      .nav-link {
+        width: 250px;
+        white-space: collapse;
+        color: #fff;
+        &:after {
+          display: none;
+        }
+        &:hover,
+        &.show {
+          background-color: map.get($theme-colors, "secondary");
+          color: #212529;
+        }
+      }
+    }
+    .nav-link {
+      color: #fff;
+      &:hover {
+        color: map.get($theme-colors, "secondary");
+      }
+    }
+    .dropdown .dropdown {
+      .nav-link {
+        color: #fff;
+      }
+      &:hover > .nav-link,
+      &:hover .nav-link:hover {
+        background-color: map.get($theme-colors, "secondary");
+        color: #212529;
+      }
+    }
+    // Level 2
+    .navbar-nav > .nav-item.dropdown {
+      &:hover,
+      &.show {
+        position: relative;
+        > .dropdown-menu {
+          display: block;
+          // Level 3 +
+          .nav-item.dropdown {
+            &.show .dropdown-menu {
+              display: none;
+            }
+            &:hover {
+              position: relative;
+              > .dropdown-menu {
+                display: block;
+                position: absolute;
+                left: 100%;
+                top: 0;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    .nav-link {
+      color: map.get($theme-colors, "light");
+    }
+    .dropdown-menu {
+      background-color: map.get($theme-colors, "primary");
+      &.show {
+        padding-left: 10px;
+      }
+    }
+  }
 }
