--- a/hepo_dakar-next-js/styles/sections/_slider.scss
+++ b/hepo_dakar-next-js/styles/sections/_slider.scss
@@ -1,53 +1,52 @@
-.section__slider{
-    .carousel-caption{ 
-        
-        h3{
-            text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-        }
-        
-        p{
-            color: #212529;
-            display: none;
-        }
-
-        @include media-breakpoint-up(sm) {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            &__wrapper{
-                /* Background color with transparency (50% opacity) */
-                background-color: rgba(255, 255, 255, 0.5); 
-                /* Apply a blur effect to the background */
-                backdrop-filter: blur(5px);
-                padding-top: 25px;
-                padding-bottom: 25px;
-                position: absolute;
-                &.left{
-                    transform: translateX(-50%);
-                    text-align: left;
-                    left: 0;
-                    padding-left: 50%;
-                    padding-right: 25px;
-                }
-                &.right{
-                    transform: translateX(50%);
-                    text-align: right;
-                    right: 0;
-                    padding-right: 50%;
-                    padding-left: 25px;
-                }
-            }
-            h3{
-                color: map.get($theme-colors, 'primary');
-                text-shadow: none;
-            }
-            p{
-                display: block;
-            }
-        }
+.section__slider {
+  .carousel-caption {
+    h3 {
+      text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
     }
+
+    p {
+      color: #212529;
+      display: none;
+    }
+
+    @include media-breakpoint-up(md) {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      &__wrapper {
+        /* Background color with transparency (50% opacity) */
+        background-color: rgba(255, 255, 255, 0.5);
+        /* Apply a blur effect to the background */
+        backdrop-filter: blur(5px);
+        padding-top: 25px;
+        padding-bottom: 25px;
+        position: absolute;
+        &.left {
+          transform: translateX(-50%);
+          text-align: left;
+          left: 0;
+          padding-left: 50%;
+          padding-right: 25px;
+        }
+        &.right {
+          transform: translateX(50%);
+          text-align: right;
+          right: 0;
+          padding-right: 50%;
+          padding-left: 25px;
+        }
+      }
+      h3 {
+        color: map.get($theme-colors, "primary");
+        text-shadow: none;
+      }
+      p {
+        display: block;
+      }
+    }
+  }
 }
