border radius carousel

--- a/hepo_dakar-next-js/styles/sections/_slider.scss
+++ b/hepo_dakar-next-js/styles/sections/_slider.scss
@@ -25,6 +25,7 @@
         padding-top: 25px;
         padding-bottom: 25px;
         position: absolute;
+        border-radius: 12px;
         &.left {
           transform: translateX(-50%);
           text-align: left;
